--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pants007/lightdm-js.git"
+  },
   "author": "pants007 <pense007@gmail.com>",
   "license": "MIT",
   "dependencies": {
@@ -28,5 +32,8 @@
   "devDependencies": {
     "node-addon-api": "^6.1.0",
     "node-gyp": "^9.3.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
