--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightdm-js",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "A native node addon that lets you authenticate with LightDM without the need for node-gtk",
   "keywords": [
     "native",
@@ -24,10 +24,10 @@
   "author": "pants007 <pense007@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "bindings": "^1.5.0"
+    "bindings": "^1.5.0",
+    "node-addon-api": "^6.1.0"
   },
   "devDependencies": {
-    "node-addon-api": "^6.1.0",
     "node-gyp": "^9.3.1"
   },
   "engines": {
